# django-wallet

./: .dockerignore  .env  .env.test  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml
django_wallet/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
django_wallet/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
django_wallet/api/migrations/: 0001_initial.py
scripts/: migrate.sh  run.sh
